--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -52,6 +52,14 @@
           {{ end }}
         </tbody>
     </table>
+    <button class="snipcart-add-item"
+  data-item-id="starry-night"
+  data-item-price="79.99"
+  data-item-url="{{ .Permalink }}"
+  data-item-description="High-quality replica of The Starry Night by the Dutch post-impressionist painter Vincent van Gogh."
+  data-item-name="The Starry Night">
+  Add to cart
+</button>
     </div>
   </div>
 </section>
