--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -53,12 +53,21 @@
         </tbody>
     </table>
     <button class="snipcart-add-item"
-  data-item-id="starry-night"
-  data-item-price="79.99"
-  data-item-url="{{ .Permalink }}"
-  data-item-description="High-quality replica of The Starry Night by the Dutch post-impressionist painter Vincent van Gogh."
-  data-item-name="The Starry Night">
-  Add to cart
+    data-item-id="painting_lessons"
+    data-item-name="1h painting class"
+    data-item-price="30"
+    data-item-url="/painting_lessons"
+    data-item-description="Painting lessons - 1h"
+    data-item-selected-plan="weekly-plan"
+
+    data-plan1-id="weekly-plan"
+    data-plan1-name="1h / week for 1 session"
+    data-plan1-frequency="weekly"
+    data-plan1-interval="1"
+    data-plan1-count="10"
+    data-item-plan1-price="20"
+    >
+    Add to cart
 </button>
     </div>
   </div>
