--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -56,7 +56,7 @@
     data-item-id="painting_lessons"
     data-item-name="1h painting class"
     data-item-price="30"
-    data-item-url="/painting_lessons"
+    data-item-url="{{ .Permalink }}"
     data-item-description="Painting lessons - 1h"
     data-item-selected-plan="weekly-plan"
 
