--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -37,7 +37,7 @@
                   data-plan1-id="monthly"
                   data-plan1-name="Montlhy Subscription"
                   data-plan1-frequency="monthly"
-
+                  data-item-plan1-price="{{ .Params.product.price }}"
                 >
                   <amp-img
                     alt="Add to Cart"
@@ -51,24 +51,7 @@
             </tr>
           {{ end }}
         </tbody>
-    </table>
-    <button class="snipcart-add-item"
-    data-item-id="painting_lessons"
-    data-item-name="1h painting class"
-    data-item-price="30"
-    data-item-url="{{ .Permalink }}"
-    data-item-description="Painting lessons - 1h"
-    data-item-selected-plan="weekly-plan"
-
-    data-plan1-id="weekly-plan"
-    data-plan1-name="1h / week for 1 session"
-    data-plan1-frequency="weekly"
-    data-plan1-interval="1"
-    data-plan1-count="10"
-    data-item-plan1-price="20"
-    >
-    Add to cart
-</button>
+      </table>
     </div>
   </div>
 </section>
