--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -58,11 +58,11 @@
     data-item-price="30"
     data-item-url="{{ .Permalink }}"
     data-item-description="Painting lessons - 1h"
-    data-item-selected-plan="weekly-plan"
+    data-item-selected-plan="monthly-plan"
 
-    data-plan1-id="weekly-plan"
-    data-plan1-name="1h / week for 1 session"
-    data-plan1-frequency="weekly"
+    data-plan1-id="monthly-plan"
+    data-plan1-name="1h / month for 1 session"
+    data-plan1-frequency="monthly"
     data-item-plan1-price="20"
     >
     Add to cart
