--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -63,6 +63,7 @@
     data-plan1-id="monthly-plan"
     data-plan1-name="1h / month for 1 session"
     data-plan1-frequency="monthly"
+    data-plan1-interval="1"
     data-item-plan1-price="20"
     >
     Add to cart
