--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -37,7 +37,8 @@
                   data-item-selected-plan="{{ .Params.product.selectedPlan }}"
 
                   {{ range $i, $e := .Params.product.availablePlans }}
-                    data-plan{{ add $i 1 }}-id="{{ $e.name }}"
+                    data-plan{{ add $i 1 }}-id="{{ $e.id }}"
+                    data-plan{{ add $i 1 }}-name="{{ $e.name }}"
                     data-plan{{ add $i 1 }}-frequency="{{ $e.frequency }}"
                     data-plan{{ add $i 1 }}-interval="{{ $e.interval }}"
                     data-item-plan{{ add $i 1 }}-price="{{ $e.itemPrice }}"
