--- a/themes/mc-server-theme-amp/layouts/plans-minecraft/list.html
+++ b/themes/mc-server-theme-amp/layouts/plans-minecraft/list.html
@@ -3,48 +3,7 @@
 {{ partial "navigation/navbar.html" . }}
 
 <main>
-  <amp-selector class="tabs-with-flex" role="tablist" keyboard-select-mode="focus">
-  <div id="tab1" role="tab" aria-controls="tabpanel1" option selected>Tab one</div>
-  <div id="tabpanel1" role="tabpanel" aria-labelledby="tab1">Tab one content... </div>
-  <div id="tab2" role="tab" aria-controls="tabpanel2" option>Tab two</div>
-  <div id="tabpanel2" role="tabpanel" aria-labelledby="tab2">Tab two content... </div>
-  <div id="tab3" role="tab" aria-controls="tabpanel3" option>Tab three</div>
-  <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3">Tab three content... </div>
-  </amp-selector>
-
-  {{ $currentPage := . }}
-  {{ range .RegularPages }}
-    <button class="snipcart-add-item snipcart-add-item-button"
-      data-item-name="{{ .Params.product.name }}"
-      data-item-id="{{ .Params.product.id }}"
-      data-item-price="{{ .Params.product.price }}"
-      data-item-url="{{ $currentPage.Permalink }}"
-      {{ range $i, $e := .Params.product.customFields }}
-        data-item-custom{{ add $i 1 }}-name="{{ $e.name }}"
-        data-item-custom{{ add $i 1 }}-type="{{ $e.type }}"
-        data-item-custom{{ add $i 1 }}-value="{{ $e.value }}"
-        data-item-custom{{ add $i 1 }}-options="{{ $e.options }}"
-      {{ end }}
-
-      data-item-selected-plan="{{ .Params.product.selectedPlan }}"
-
-      {{ range $i, $e := .Params.product.availablePlans }}
-        data-plan{{ add $i 1 }}-id="{{ $e.id }}"
-        data-plan{{ add $i 1 }}-name="{{ $e.name }}"
-        data-plan{{ add $i 1 }}-frequency="{{ $e.frequency }}"
-        data-plan{{ add $i 1 }}-interval="{{ $e.interval }}"
-        data-item-plan{{ add $i 1 }}-price="{{ $e.itemPrice }}"
-      {{ end }}
-    >
-      <amp-img
-        alt="Add to Cart"
-        src="/images/shopping-cart-plus.png"
-        width="24"
-        height="24"
-      >
-      </amp-img>
-    </button>
-  {{ end }}
+  {{ partial "section/plans-custom-cta.html" . }}
 </main>
 
 {{ partial "navigation/footer.html" . }}
