--- a/themes/mc-server-theme-amp/layouts/about/list.html
+++ b/themes/mc-server-theme-amp/layouts/about/list.html
@@ -3,9 +3,9 @@
 {{ partial "navigation/navbar.html" . }}
 
 <main>
-  {{ partial "about/powerful.html" . }}
-  {{ partial "about/powered.html" . }}
-  {{ partial "about/team.html" . }}
+  {{ partial "section/about-powerful.html" . }}
+  {{ partial "section/about-powered.html" . }}
+  {{ partial "section/about-team.html" . }}
 </main>
 
 {{ partial "navigation/footer.html" . }}
