--- a/themes/mc-server-theme-amp/layouts/index.html
+++ b/themes/mc-server-theme-amp/layouts/index.html
@@ -3,11 +3,11 @@
 {{ partial "navigation/navbar.html" . }}
 
 <main>
-  {{ partial "home/hero.html" . }}
-  {{ partial "home/ryzen.html" . }}
-  {{ partial "home/features.html" . }}
-  {{ partial "home/accessibility.html" . }}
-  {{ partial "home/cta.html" . }}
+  {{ partial "section/home-hero.html" . }}
+  {{ partial "section/home-ryzen.html" . }}
+  {{ partial "section/home-features.html" . }}
+  {{ partial "section/home-accessibility.html" . }}
+  {{ partial "section/home-cta.html" . }}
 </main>
 
 {{ partial "navigation/footer.html" . }}
