--- a/themes/mc-server-theme-amp/layouts/partials/section/home-ryzen.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/home-ryzen.html
@@ -4,10 +4,10 @@
       <div class="column-12">
         <div class="padding-x-lg-64">
           <amp-img
-            alt="Host Illustration"
-            src="/images/ryzen-image.png"
-            width="1110"
-            height="960"
+            alt="{{ .Params.home.ryzen.image.alt }}"
+            src="{{ .Params.home.ryzen.image.src }}"
+            width="{{ .Params.home.ryzen.image.width }}"
+            height="{{ .Params.home.ryzen.image.height }}"
             layout="responsive"
           >
           </amp-img>
