--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -26,6 +26,7 @@
 .justify-content-space-around { justify-content: space-around; }
 
 .justify-self-center { justify-self: center; }
+.justify-self-flex-start { justify-self: flex-start; }
 
 .flex-grow-1 { flex-grow: 1; }
 
