--- a/themes/mc-server-theme-amp/assets/scss/sections/_snipcart.scss
+++ b/themes/mc-server-theme-amp/assets/scss/sections/_snipcart.scss
@@ -4,6 +4,11 @@
   background: linear-gradient(to bottom, #00E7FE, #093E88);
   border-radius: 4px;
 }
+.snipcart-custom-add-item-button {
+  background-color: #121212;
+  border: none;
+  cursor: pointer;
+}
 .snipcart-checkout-button {
   color: #00E7FE;
   background-color: #121212;
