--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -35,6 +35,7 @@
 .margin-bottom-24 { margin-bottom: 24px; }
 
 .margin-right-16 { margin-right: 16px; }
+.margin-right-64 { margin-right: 64px; }
 
 .margin-x-8 { margin-left: 8px; margin-right: 8px; }
 .margin-x-16 { margin-left: 16px; margin-right: 16px; }
@@ -75,9 +76,13 @@
 }
 
 .width-100 { width: 100%; }
-.height-100 { height: 100%; }
 
+.max-width-500 { max-width: 500px; }
+
+.height-100 { height: 100%; }
 .height-64 { height: 64px; }
+
+.max-height-300 { max-height: 300px; }
 
 .vertical-align-middle { vertical-align: middle; }
 
@@ -101,6 +106,7 @@
 
 .text-align-center { text-align: center; }
 .text-align-left { text-align: left; }
+.text-align-right { text-align: right; }
 
 .color-white { color: #FFFFFF; }
 .color-aqua { color: #00EAFF; }
@@ -110,6 +116,18 @@
 .background-color-swamp { background-color: #2A2B2B; }
 .background-color-dodger-blue { background-color: #0068FF; }
 .background-color-licorice { background-color: #2D3A4A; }
+
+.overflow-y-scroll { overflow-y: scroll; }
+.overflow-x-scroll { overflow-x: scroll; }
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar { display: none;  /* Safari and Chrome */ }
+}
+
+.white-space-nowrap { white-space: nowrap; }
 
 .square-container {
   position: relative;
